# WGU-Reddit-Feedback-Analyzer

./: .gitignore  CHANGELOG.md  README.md  app.py  index.html  pyproject.toml  requirements.txt  tmp_alignment_snip1.txt  tmp_inspect_snippets.txt  tmp_snip.txt  tmp_tree.txt  tracked_files.txt
WGU_catalog/: Scraper_V10_config copy.py  Scraper_V10_config.py  parse_catalog copy.py  parse_catalog.py  run_parser.py
_demo/: manifest.json  predictions_FULL.csv  raw_io_FULL.jsonl
archive_legacy/: STUDENT_SURVIVAL_GUIDE.md  WGU Catalog Scraper.docx  index.html
artifacts/: schema_snapshot_stage0.json  stage0_lock.json
configs/: benchmark_gpt5_dev.json  benchmark_gpt5_mini_dev.json  benchmark_gpt5_nano_dev.json  benchmark_llama3_dev.json  common.py  config.yaml
data/: 2025_06_course_list_with_college.csv  LLM_classify_prompt.txt  college_snapshots.json  course_list_with_college.csv  gui_posts_top20.csv  gui_prototype_posts_merged.json  help_keywords.py  merged_course_feedback.json  wgu_subreddits.csv
demo/: manifest.json  predictions_FULL.csv  raw_io_FULL.jsonl
docs/: BENCHMARK_GUIDE.md  CATALOG_OVERVIEW.md  CODING_STANDARDS.md  COST_ESTIMATION.md  DATASET_OVERVIEW.md  DEVLOG.md  GUI_SNAPSHOT_OVERVIEW.md  HUGO_SITE.md  LABEL_GUIDE.md  LLM-AS-CLASSIFIER_PLAN.md  METHODOLOGICAL_FOUNDATIONS.md  PAPER_RUNS.md  PIPELINE_COUNTS_OVERVIEW.md  PIPELINE_SPEC.md  PIPELINE_SPEC_DETAILED.md  Painpoint_Walkthrough_Top10.md  STAGE1A_SAMPLIING_STRATEGY.md  STAGE1_SPEC.md  STAGE2_SPEC.md  STAGE3_SPEC.md  STAGE4_REPORT_DATA_SPEC.md  Schema_And_Hierar  TECHNICAL_OVERVIEW.md  (+4 more)
(+1146 files in other folders)
